# orol

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/src/: live_mcmc_rectangular_prism_fitting.cpp  live_naive_rectangular_prism_fitting.cpp  live_pf_rectangular_prism_fitting.cpp  mcmc_rectangular_prism_fitting.cpp  naive_rectangular_prism_fitting.cpp  pf_rectangular_prism_fitting.cpp  rectangular_fitting_demo.cpp  rectangular_prism_fitting.cpp
cmake/: orol_targets.cmake  orol_utils.cmake
cmake/modules/: FindQMat.cmake
fitting/: CMakeLists.txt
fitting/include/orol/fitting/: fitting.h  mcmc_rect_prism_fitting.h  naive_rect_prism_fitting.h  pf_rect_prism_fitting.h  rect_prism_cloud_particle.h
fitting/include/orol/fitting/particle_filter/: particle_filter.h
fitting/src/: mcmc_rect_prism_fitting.cpp  naive_rect_prism_fitting.cpp  pf_rect_prism_fitting.cpp  rect_prism_cloud_particle.cpp
shapes/: CMakeLists.txt
shapes/include/orol/shapes/: rectprism.h
shapes/src/: axis.cpp  cylinder.cpp  rectprism.cpp  vector.cpp
vision/: CMakeLists.txt
visual/: CMakeLists.txt
visual/include/orol/visual/: rcdraw.h  viewer.h
visual/include/orol/visual/innermodel/: innermodel.h  innermodelManager.h  innermodelreader.h  innermodelviewer.h
visual/include/orol/visual/osgviewer/: osgview.h  viewerqt.h
visual/scenarios/: cubeCloud.xml  cylinderCloud.xml  test_pcd.pcd
visual/src/: rcdraw.cpp  viewer.cpp
visual/src/innermodel/: innermodel.cpp  innermodelManager.cpp  innermodelreader.cpp  innermodelviewer.cpp
visual/src/osgviewer/: adapterwidget.cpp  findnamednode.cpp  getworldcoorofnode.cpp  osgview.cpp  viewerqt.cpp
